# rag-stroyactiv-pyton

./: .cursor-rules  .cursorrules  .gitignore  .pre-commit-config.yaml  API_TESTS_SUMMARY.md  BITBUCKET_SETUP.md  CHANGELOG.md  CLEANUP.md  LOGGING_ARCHITECTURE_REFACTOR_PLAN.md  LOGGING_ARCHITECTURE_REFACTOR_REPORT_STAGE2.md  LOGGING_CONFIGURATION_DOCUMENTATION_PLAN_STAGE4.md  LOGGING_CONFIGURATION_DOCUMENTATION_REPORT_STAGE4.md  LOGGING_MODERNIZATION_REPORT_STAGE1.md  LOGGING_PERFORMANCE_OPTIMIZATION_PLAN_STAGE3.md  LOGGING_PERFORMANCE_OPTIMIZATION_REPORT_STAGE3.md  LOGGING_SYSTEM_DEPENDENCY_ANALYSIS.md  Makefile  PROJECT_DEBUG_PREPARATION_PLAN.md  PROJECT_OPTIMIZATION_ANALYSIS.md  README.md  REFACTORING_PLAN.md  STAGE_4_SUMMARY.md  STAGE_5_COMPLETION_REPORT.md  TESTS_OPTIMIZATION_PLAN.md  TESTS_STATUS_REPORT.md  alembic.ini  demo_columns.csv  env.example  export_test_supplier_50_materials_20250611_133502_with_vectors.csv  export_test_supplier_extended_50_20250611_174504_with_vectors.csv  extended_supplier_compact.csv  id_bitbucket  id_bitbucket.pub  load_materials.py  main.py  optimization_plan.md  price_processor.py  pyproject.toml  pytest.ini  refactoring_plan.md  (+13 more)
.trae/: README.md  SETUP_INSTRUCTIONS.md  config.json
PLAN_DOCS/: AI_ENRICHMENT_PLAN.md  AUTHORIZATION_IMPLEMENTATION_PLAN.md  CODE_QUALITY_IMPROVEMENT_PLAN.md  DIAGRAM_INTEGRATION_PLAN.md  DOCUMENTATION_OPTIMIZATION_PLAN.md  FULL_MIDDLEWARE_RECOVERY_FINAL_REPORT.md  LEGACY_CODE_REMOVAL_PLAN.md  LOGGING_SYSTEM_ANALYSIS_REPORT.md  LOGGING_SYSTEM_MODERNIZATION_PLAN.md  LOGGING_SYSTEM_REFACTORING_PLAN.md  MIDDLEWARE_FUNCTIONALITY_ANALYSIS.md  MIDDLEWARE_RECOVERY_PLAN.md  MIDDLEWARE_RECOVERY_RESULTS.md  PROJECT_DEBUG_PREPARATION_PLAN.md  PYTHON_3.11_MIGRATION_PLAN.md  REST_API_TESTING_PLAN.md  TESTS_OPTIMIZATION_PLAN.md  UNIFIED_LOGGING_SYSTEM_PLAN.md  text.txt
alembic/: env.py
api/: __init__.py
configs/: qdrant-only.env.example
core/: __init__.py  bash_commands  config.py
docs/: API_CHANGES_REFERENCE_DELETE.md  API_DOCUMENTATION.md  API_DOCUMENTATION_COMPLIANCE_REPORT.md  API_DOCUMENTATION_STANDARDS.md  API_DOCUMENTATION_UNIFICATION_REPORT.md  API_ENDPOINTS_COMPLETE.md  API_ENDPOINTS_QUICK_REFERENCE.md  API_ENDPOINTS_TREE.md  API_EXAMPLES.md  ARCHITECTURE.md  BATCH_MATERIALS_LOADING.md  CONFIGURATION.md  DATABASE_ARCHITECTURE.md  DATABASE_RULES.md  DOCUMENTATION_UPDATES.md  EXECUTIVE_SUMMARY_LOGGING_CRISIS.md  FUTURE_STAGES.md  HISTORY.md  HTTP_LOGGING_ARCHITECTURE_ANALYSIS.md  HTTP_LOGGING_VULNERABILITIES_ANALYSIS.md  LOGGING_SYSTEM_GUIDE.md  LOGGING_SYSTEM_MIGRATION_GUIDE.md  MATERIAL_OBJECT_STRUCTURE.md  MIDDLEWARE_LOGGING_FIX_SUMMARY.md  MIGRATION_GUIDE.md  PARSER_MODULE_INTEGRATION_COMPLETE.md  PARSER_MODULE_INTEGRATION_PLAN.md  PARSER_MODULE_INTEGRATION_PLAN_V2.md  POSTGRESQL_SSH_TUNNEL_INTEGRATION_PLAN.md  QDRANT_ONLY_MODE.md  RAG_SCHEMA_IMPLEMENTATION_PLAN.md  README.md  SSH_TUNNEL_CONNECTION_RESET_SOLUTION.md  STAGE_3_POSTGRESQL_HYBRID.md  STAGE_4_REDIS_CACHING.md  STAGE_5_ADVANCED_SEARCH.md  STAGE_7_REFACTORING.md  TESTING_HOT_RELOAD_FIX.md  TROUBLESHOOTING.md  TROUBLESHOOTING_LOGGING.md  (+4 more)
parser_module/: README.md  __init__.py  ai_parser.py  enhanced_ai_parser.py  integration.py  main.py  material_parser.py  parser_config.py  requirements.txt  system_prompts.py  test_enhanced_parser.py  test_materials_image.json  units_config.py
scripts/: README.md  STAGE_7_SUMMARY.md  STAGE_8_SUMMARY.md  check_api_documentation.py  check_filename_conflicts.py  materials_database.json  migrate_logging.py  populate_colors_reference.py  populate_units_reference.py  regenerate_embeddings.py  test_enhanced_storage.py  test_middleware_recovery.py  test_sku_assignment.py  test_sku_collection_check.py  test_sku_search.py  test_stage_8_full_pipeline.py
services/: __init__.py  advanced_search.py  batch_processing_service.py  collection_initializer.py  combined_embedding_service.py  dynamic_batch_processor.py  embedding_comparison.py  enhanced_parser_integration.py  material_processing_pipeline.py  materials.py  materials_new.py  materials_refactored.py  optimized_search.py  price_processor.py  sku_search_service.py  ssh_tunnel_service.py
tech_texts/: batch_processing_fallback_audit.md  batch_processing_fallback_refactoring_plan.md  batch_processing_qdrant_only_plan.md  color_status.txt  env_diff.py  fallback_refactoring_plan.md  unit_enrichment_dictionary.txt
temp_enrichment/: .gitignore  README.md  ai_fallback.py  ai_parser.py  config.py  conftest.py  embedding_cache.json  enriched_final.json  hybrid_parser.py  main.py  price_enricher.py  prompts.yaml  regex_parser.py  report_final.json  requirements.txt
tests/: README.md  README_UNIFIED_LOGGING_TESTS.md  __init__.py  conftest.py  conftest_fast.py  conftest_test.py  test_advanced_search.py  test_api_conditions.py  test_basic_functionality.py  test_cached_repository.py  test_cycle_documentation.py  test_database_architecture.py  test_dynamic_pool_manager.py  test_health.py  test_hybrid_repository.py  test_materials.py  test_materials_fast.py  test_materials_refactored.py  test_middleware.py  test_migrations.py  test_monitoring.py  test_optimizations.py  test_postgresql_adapter.py  test_prices.py  test_qdrant_only_integration.py  test_qdrant_only_mode.py  test_real_db_connection.py  test_redis_adapter.py  test_redis_serialization_optimization.py  test_reference.py  test_reference_fast.py  test_root.py  test_search.py  test_services_direct.py  test_simple_health.py  test_unified_logging_suite.py
utils/: README.md  __init__.py  check_db_connection.py  check_loaded_materials.py  cleanup_collections.py  cleanup_test_data.py  clear_cache.py  common.py  common_utils.py  create_test_data.py  demo_postgresql_hybrid.py  demo_redis_caching.py  export_supplier_prices.py  load_building_materials.py  load_materials.py  material_matcher.py  material_summary.py  regenerate_embeddings.py  save_matches.py  save_simple_matches.py  show_material.py  show_real_material.py  ssh_tunnel.py  test_all_services.py  (+2 more)
(+316 files in other folders)
